# b-rad-coin

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  publish.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bip39_words.rs  blockchain_database.rs  blockchain_sync.rs  blockchain_sync_simple.rs  blockchain_sync_simple.rs.backup  commands.rs  config.rs  developer_commands.rs  dns_seeder.rs  errors.rs  fee_estimator.rs  lib.rs  logging.rs  main.rs  mempool_service.rs  mining_service.rs  network_constants.rs  network_monitor.rs  network_service.rs  security.rs  wallet_data.rs  wallet_manager.rs  wallet_sync_service.rs
src-tauri/src/core/: blockchain.rs  mod.rs  server.rs  transaction.rs  tx.rs  utxoset.rs  wallets.rs
src/components/: AddressSelectionDialog.tsx  AppHeader.tsx  BlockchainMoveDialog.tsx  BlockchainSetupDialog.tsx  BlockchainStatus.tsx  MiningAddressDialog.tsx  NetworkStatus.tsx  OpenCreateWalletDialog.tsx  QRCodeGeneratorFixed.tsx  SecureWalletDialog.tsx  SeedPhraseDialog.tsx  Sidebar.tsx  VerifySeedPhraseDialog.tsx  WalletDialog.tsx
src/components/ui/: FormField.tsx  PageContainer.tsx  SectionHeader.tsx  SettingsItem.tsx  StatusIndicator.tsx  StyledCard.tsx
src/context/: AppSettingsContext.tsx  WalletContext.tsx  WalletDialogContext.tsx
src/hooks/: useForm.ts  useThemeMode.ts  useTrayIntegration.ts
src/lib/: wallet.ts
src/pages/: About.tsx  Account.tsx  Advanced.tsx  Developer.tsx  SendReceive.tsx  Settings.tsx  Transactions.tsx
src/styles/: themeConstants.ts
src/types/: index.ts  mining.ts  settings.ts  wallet.ts
