[package]
name = "b-rad-coin"
version = "0.1.0"
description = "B-Rad Coin Wallet"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "b_rad_coin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2.0.0", features = [] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-single-instance = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0.75"
thiserror = "2.0.12"  # For defining error types

# Async dependencies
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"

# Logging dependencies
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.31"
once_cell = "1.21.3"

# Platform-specific directories
dirs = "6.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.0"

