[package]
name = "b-rad-coin"
version = "0.2.4"
description = "B-Rad Coin Wallet"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "b_rad_coin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-fs = "2.4.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-single-instance = { version = "2.3.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"
base64 = "0.22.1"

# Cryptography dependencies
aes = "0.8.3"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.9"
generic-array = "1.2.0"
hex = "0.4.3"
bip39 = "2.2.0"  # For BIP39 mnemonic handling
bitcoin = { version = "0.32.6", features = ["serde"] }  # For Bitcoin key derivation
secp256k1 = { version = "0.31.1", features = ["rand", "recovery"] }  # For secp256k1 operations

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"  # For defining error types

# Async dependencies
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"

# Logging dependencies
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.41"
once_cell = "1.21.3"

# Platform-specific directories
dirs = "6.0.0"
ring = "0.17.14"

# File system utilities
opener = "0.8.2"

# Database dependencies
sled = "0.34.7"  # Local database for blockchain data
bincode = { version = "2.0.1", features = ["serde"] }

# File dialog dependencies
rfd = "0.15.4"  # Native file dialogs

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"

